trying different approach to fix video time going down on small screens

--- a/app/styles/main-foundation.css
+++ b/app/styles/main-foundation.css
@@ -1439,6 +1439,19 @@ a.editable-click{
   }
 }
 
+@media only screen and (max-width:46.063em){
+  .hide-for-semi-medium{
+    display: none !important;
+  }
+}
+
+@media only screen and (max-width:35.063em){
+  .hide-for-semi-small{
+    display: none !important;
+  }
+}
+
+
 a.active{
     color: black !important;
 }
